--- a/src/header.css
+++ b/src/header.css
@@ -27,7 +27,7 @@
     font-weight: 400;
     font-size: 17px;
     line-height: 28px;
-    color: var(--color-text);
+    color: #fff;
 
     margin-top: 1.5rem;
 }
