--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   --color-bg: #040C18;
   --color-footer: #031B34;
   --color-blog: #042c54;
-  --color-text: #81AFDD;
+  --color-text: #1E0342;
   --color-subtext: #FF8A71;
    --color-brand--1: #ffb545;
    --color-brand--2: #00c46a;
