--- a/src/intro.css
+++ b/src/intro.css
@@ -39,38 +39,7 @@
     font-weight: 400;
     font-size: 17px;
     line-height: 28px;
-    color: var(--color-text);
-
-    margin-top: 1.5rem;
-}
-
-.olap_intro-content p {
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 28px;
-    color: var(--color-text);
-
-    margin-top: 1.5rem;
-}
-
-.olap_intro-content p {
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 28px;
-    color: var(--color-text);
-
-    margin-top: 1.5rem;
-}
-
-
-.olap_intro-content p {
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 28px;
-    color: var(--color-text);
+    color: #fff;
 
     margin-top: 1.5rem;
 }
